<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:custom="http://schemas.android.com/apk/res-auto"
   android:key="main_settings_screen">

  <PreferenceCategory
     android:title="@string/timer_screen">

    <ListPreference
       android:key="inspection_mode"
       android:title="@string/inspection_mode"
       android:summary="@string/inspection_mode_summary"
       android:entries="@array/entries_inspection_modes"
       android:entryValues="@array/entryvalues_inspection_modes"
       android:dialogTitle="@string/inspection_mode"
       android:defaultValue="1"/>

    <com.cube.nanotimer.gui.widget.preferences.WheelViewDialog
       android:key="inspection_time"
       android:title="@string/inspection_time"
       android:summary="@string/inspection_time_summary"
       android:defaultValue="@integer/inspection_time"
       custom:min="0"
       custom:max="600"
       custom:defaultVal="@integer/inspection_time"/>

    <CheckBoxPreference
       android:key="inspection_sounds"
       android:title="@string/inspection_sounds"
       android:summary="@string/inspection_sounds_summary"
       android:defaultValue="@bool/inspection_sounds"/>

    <ListPreference
       android:key="inspection_sounds_type"
       android:title="@string/inspection_sounds_type"
       android:summary="@string/inspection_sounds_type_summary"
       android:entries="@array/entries_inspection_sounds_type"
       android:entryValues="@array/entryvalues_inspection_sounds_type"
       android:dialogTitle="@string/inspection_sounds_type"
       android:defaultValue="1"/>

    <CheckBoxPreference
       android:key="show_time_when_running"
       android:title="@string/show_time_when_running"
       android:summary="@string/show_time_when_running_summary"
       android:defaultValue="@bool/show_time_when_running"/>

    <CheckBoxPreference
       android:key="keep_timer_screen_on"
       android:title="@string/keep_screen_on"
       android:summary="@string/keep_screen_on_summary"
       android:defaultValue="@bool/keep_timer_screen_on"/>

    <CheckBoxPreference
       android:key="high_precision_timer"
       android:title="@string/high_precision_timer"
       android:summary="@string/high_precision_timer_summary"
       android:defaultValue="@bool/high_precision_timer"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:title="@string/solve_types">

    <Preference
       android:title="@string/edit_solve_types"
       android:summary="@string/edit_solve_types_summary">

      <intent android:action="com.cube.nanotimer.gui.SolveTypesActivity"/>

    </Preference>

    <CheckBoxPreference
       android:key="solve_types_shortcut"
       android:title="@string/solve_types_shortcut"
       android:summary="@string/solve_types_shortcut_summary"
       android:defaultValue="@bool/solve_types_shortcut"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:title="@string/scrambles">

    <ListPreference
       android:key="big_cubes_notation"
       android:title="@string/big_cubes_notation"
       android:summary="@string/big_cubes_notation_summary"
       android:entries="@array/entries_big_cubes_notation"
       android:entryValues="@array/entryvalues_big_cubes_notation"
       android:dialogTitle="@string/big_cubes_notation"
       android:defaultValue="@integer/big_cubes_notation"/>

    <ListPreference
       android:key="clock_notation"
       android:title="@string/clock_notation"
       android:summary="@string/clock_notation_summary"
       android:entries="@array/entries_clock_notation"
       android:entryValues="@array/entryvalues_clock_notation"
       android:dialogTitle="@string/clock_notation"
       android:defaultValue="@integer/clock_notation"/>

    <CheckBoxPreference
       android:key="randomstate_scrambles"
       android:title="@string/use_modern_scrambles"
       android:summary="@string/use_modern_scrambles_summary"
       android:defaultValue="@bool/randomstate_scrambles"/>

    <PreferenceScreen
       android:key="modern_scrambles_settings_screen"
       android:title="@string/modern_scrambles_settings"
       android:summary="@string/modern_scrambles_settings_summary"
       android:persistent="false"
       android:dependency="randomstate_scrambles">

      <ListPreference
         android:key="scrambles_quality"
         android:title="@string/scrambles_quality"
         android:summary="@string/scrambles_quality_summary"
         android:entries="@array/entries_scrambles_quality"
         android:entryValues="@array/entryvalues_scrambles_quality"
         android:dialogTitle="@string/scrambles_quality"
         android:defaultValue="@integer/scrambles_quality"/>

      <ListPreference
         android:key="scramble_notification_mode"
         android:title="@string/notification_mode"
         android:summary="@string/notification_mode_summary"
         android:entries="@array/entries_scramble_notification"
         android:entryValues="@array/entryvalues_scramble_notification"
         android:dialogTitle="@string/notification_mode"
         android:defaultValue="@integer/scramble_notification_mode"/>

      <CheckBoxPreference
         android:key="scrambles_gen_when_plugged_in"
         android:title="@string/generate_when_plugged_in"
         android:summary="@string/generate_when_plugged_in_summary"
         android:defaultValue="@bool/scrambles_gen_when_plugged_in"/>

      <com.cube.nanotimer.gui.widget.preferences.NumberEntryDialog
         android:key="scrambles_gen_count_when_plugged_in"
         android:title="@string/gen_count_when_plugged_in"
         android:summary="@string/gen_count_when_plugged_in_summary"
         custom:min="30"
         android:defaultValue="@integer/scramble_gen_count_when_plugged_in"
         custom:defaultVal="@integer/scramble_gen_count_when_plugged_in"
         android:dependency="scrambles_gen_when_plugged_in"/>

      <com.cube.nanotimer.gui.widget.preferences.NumberEntryDialog
         android:key="scrambles_min_cache_size"
         android:title="@string/min_cache_size"
         android:summary="@string/min_cache_size_summary"
         custom:min="20"
         android:defaultValue="@integer/min_scramble_cache_size"
         custom:defaultVal="@integer/min_scramble_cache_size"/>

      <com.cube.nanotimer.gui.widget.preferences.NumberEntryDialog
         android:key="scrambles_max_cache_size"
         android:title="@string/max_cache_size"
         android:summary="@string/max_cache_size_summary"
         custom:min="30"
         android:defaultValue="@integer/max_scramble_cache_size"
         custom:defaultVal="@integer/max_scramble_cache_size"/>

      <com.cube.nanotimer.gui.widget.preferences.PreGenerateScramblesDialog
         android:key="pregen_scrambles"
         android:title="@string/pregen_scrambles"
         android:summary="@string/pregen_scrambles_summary"/>

    </PreferenceScreen>

  </PreferenceCategory>

  <PreferenceCategory
     android:key="history"
     android:title="@string/history">

    <com.cube.nanotimer.gui.widget.preferences.ClearHistoryDialog
       android:title="@string/clear_history"
       android:summary="@string/clear_all_history"
       android:dialogMessage="@string/clear_all_history_confirmation"
       android:positiveButtonText="@string/yes"
       android:negativeButtonText="@string/no"/>

  </PreferenceCategory>

</PreferenceScreen>