<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:padding="3dp"
   android:gravity="center">

  <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:textSize="18sp"
     android:text="@string/rate_message"/>

  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
     android:orientation="horizontal">
    <android.support.v7.widget.AppCompatButton
       android:id="@+id/buRateNow"
       android:layout_weight="1"
       android:layout_marginRight="3dp"
       android:text="@string/rate_now"
       android:textSize="15sp"
       style="@style/MenuButton"/>
    <android.support.v7.widget.AppCompatButton
       android:id="@+id/buAskLater"
       android:layout_weight="1"
       android:layout_marginLeft="3dp"
       android:layout_marginRight="3dp"
       android:text="@string/ask_later"
       android:textSize="15sp"
       style="@style/MenuButton"/>
    <android.support.v7.widget.AppCompatButton
       android:id="@+id/buDontAskAgain"
       android:layout_weight="1"
       android:layout_marginLeft="3dp"
       android:text="@string/dont_ask_again"
       android:textSize="15sp"
       style="@style/MenuButton"/>
  </LinearLayout>

</LinearLayout>