<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingLeft="16dp"
   android:paddingRight="16dp"
   android:paddingTop="16dp"
   android:paddingBottom="8dp"
   android:minWidth="300dp">

  <LinearLayout
     android:baselineAligned="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
    <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1">
      <TableRow android:layout_marginTop="4dp">
        <TextView
           android:id="@+id/tvLabelAverage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/session_avg"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>
        <TextView
           android:id="@+id/tvAverage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="6dp"
           android:layout_marginLeft="6dp"
           android:textColor="@color/white"
           android:textSize="16sp"/>
      </TableRow>
      <TableRow android:layout_marginTop="4dp">
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/session_best"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>
        <TextView
           android:id="@+id/tvBest"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:layout_marginStart="6dp"
           android:layout_marginLeft="6dp"
           android:textSize="16sp"/>
      </TableRow>
      <TableRow android:id="@+id/trBestMeanOfThree" android:layout_marginTop="4dp" android:visibility="gone">
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/session_best_mean_of_three"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>
        <TextView
           android:id="@+id/tvBestMeanOfThree"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:layout_marginStart="6dp"
           android:layout_marginLeft="6dp"
           android:textSize="16sp"/>
      </TableRow>
    </TableLayout>
    <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_weight="1">
      <TableRow android:layout_marginTop="4dp">
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/session_solves"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>
        <TextView
           android:id="@+id/tvSolves"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="6dp"
           android:layout_marginLeft="6dp"
           android:textColor="@color/white"
           android:textSize="16sp"/>
      </TableRow>
      <TableRow android:layout_marginTop="4dp">
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/session_deviation"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>
        <TextView
           android:id="@+id/tvDeviation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:layout_marginStart="6dp"
           android:layout_marginLeft="6dp"
           android:textSize="16sp"/>
      </TableRow>
      <TableRow android:id="@+id/trAccuracy" android:layout_marginTop="4dp" android:visibility="gone">
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/session_accuracy"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>
        <TextView
           android:id="@+id/tvAccuracy"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:layout_marginStart="6dp"
           android:layout_marginLeft="6dp"
           android:textSize="16sp"/>
      </TableRow>
    </TableLayout>
  </LinearLayout>

  <LinearLayout
     android:id="@+id/bestAveragesLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="18dp">

    <TextView
       android:text="@string/best_averages"
       android:layout_marginBottom="6dp"
       style="@style/DialogSectionLabel"/>

    <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="-12dp"
       android:layout_marginRight="-12dp"
       style="@style/TableCardView">
      <TableLayout
         android:id="@+id/bestAveragesTableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/EqualSizeColumnsTable">
        <TableRow>
          <TextView style="@style/AverageTableHeaderField" android:text="5"/>
          <TextView style="@style/AverageTableHeaderField" android:text="12"/>
          <TextView style="@style/AverageTableHeaderField" android:text="50"/>
          <TextView style="@style/AverageTableHeaderField" android:text="100"/>
        </TableRow>
        <TableRow android:background="@color/grid_background_1">
          <TextView android:id="@+id/tvAvgOfFive" style="@style/TableCell"/>
          <TextView android:id="@+id/tvAvgOfTwelve" style="@style/TableCell"/>
          <TextView android:id="@+id/tvAvgOfFifty" style="@style/TableCell"/>
          <TextView android:id="@+id/tvAvgOfHundred" style="@style/TableCell"/>
        </TableRow>
      </TableLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>

  <TextView
     android:text="@string/times"
     android:layout_marginTop="18dp"
     android:layout_marginBottom="6dp"
     style="@style/DialogSectionLabel"/>

  <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="-12dp"
       android:layout_marginRight="-12dp"
       style="@style/TableCardView">
      <androidx.gridlayout.widget.GridLayout
         android:id="@+id/sessionTimesLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:columnCount="4">
      </androidx.gridlayout.widget.GridLayout>
    </androidx.cardview.widget.CardView>

  </ScrollView>

</LinearLayout>
